# password_strength_meter

./: pyproject.toml
src/pwdstrength/: __init__.py  strength_voice.py
