[project]
name = "pwdstrength"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "DoniaBatool", email = "donia1510aptech@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "gtts>=2.5.4",
    "imageio[ffmpeg]>=2.37.0",
    "password-strength>=0.0.3.post2",
    "pydub>=0.25.1",
    "pyperclip>=1.9.0",
    "streamlit>=1.43.0",
    "streamlit-webrtc>=0.47.9",
]

[project.scripts]
pwdstrength = "pwdstrength:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
